[package]
name = "device-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
clap = { version = "4.5.57", features = ["derive"] }
default-net = "0.22.0"
env_logger = "0.11.8"
log = "0.4.29"
pnet = "0.35.0"
rand = "0.9.2"
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
